# myopencv

./: CMakeLists.txt  RAEDME.md  README.md
002_LoadDisplayImage/: README.md  display_image.cpp
004_Mat/: mat_creat_print.cpp
005_scan_image_measure_time/: CMakeLists.txt  README.md
01_prepared_introduction/: README.md
01_prepared_introduction/001_CMakeDisplay/: README.md
01_prepared_introduction/003_image_cvtcolor_imwrite/: CMakeLists.txt  image_cvtcolor_imwrite.cpp
02_core_module/: README.md
02_core_module/01_Mat/: README.md
02_core_module/02_scan_image_measure_time/: README.md  scan_image_measure_time.cpp
02_core_module/03_mat_mask_operation/: CMakeLists.txt
02_core_module/04_operation_with_image/: CMakeLists.txt  operation_image.cpp
02_core_module/05_blending_two_images/: CMakeLists.txt  README.md
02_core_module/06_change_contrast_and_brightness/: README.md  basicLinearTransform.cpp
02_core_module/07_basic_drawing/: CMakeLists.txt  README.md  basic_drawing.cpp
02_core_module/08_random_generator_text_drawing/: README.md
02_core_module/10-file_input_output/: CMakeLists.txt  README.md
02_core_module/11_interoperability_with_OpenCV_1/: README.md  interoperability_with_OpenCV_1.cpp
03_imgproc_module/: README.md
03_imgproc_module/01_smoothing_image/: README.md  smoothing_image.cpp
03_imgproc_module/02_erosion_dilation/: README.md  erosion_dilation.cpp
03_imgproc_module/03_more_morphology/: CMakeLists.txt
03_imgproc_module/04_hit_or_miss/: CMakeLists.txt  README.md
03_imgproc_module/05_extract_lines/: README.md
03_imgproc_module/06_image_pyramids/: CMakeLists.txt  README.md  image_pyramids.cpp
03_imgproc_module/07_threshold/: CMakeLists.txt  README.md
03_imgproc_module/08_threshold_inRange/: CMakeLists.txt  README.md  threshold_inRange.cpp
03_imgproc_module/09_filter2D/: CMakeLists.txt  README.md  filter2D.cpp
03_imgproc_module/10_copyMakeBorder/: CMakeLists.txt
03_imgproc_module/11_sobel/: sobel.cpp
03_imgproc_module/12_laplace/: CMakeLists.txt  README.md  laplace.cpp
03_imgproc_module/13_canny_detector/: CMakeLists.txt  README.md  canny_detector.cpp
03_imgproc_module/14_hough_lines/: README.md  hough_lines.cpp
03_imgproc_module/15_hough_circles/: README.md  houghcircles.cpp
03_imgproc_module/17_affine_transformations/: CMakeLists.txt  README.md  affine_transformations.cpp
03_imgproc_module/18_histogram_equalization/: CMakeLists.txt  README.md
03_imgproc_module/19_histogram_calculation/: README.md
03_imgproc_module/20_histogram_comparison/: README.md
03_imgproc_module/21_back_projection/: CMakeLists.txt  back_projection.cpp
03_imgproc_module/22_match_template/: CMakeLists.txt
03_imgproc_module/23_find_draw_contours/: CMakeLists.txt  find_draw_contours.cpp
03_imgproc_module/24_convex_hull/: CMakeLists.txt  README.md
03_imgproc_module/25_bounding_boxes_and_circles/: CMakeLists.txt  README.md
03_imgproc_module/26_bounding_rotated_boxes_and_ellipses/: CMakeLists.txt  bounding_rotated_boxes_and_ellipses.cpp
03_imgproc_module/27_image_moments/: image_moments.cpp
03_imgproc_module/28_point_polygon/: CMakeLists.txt
03_imgproc_module/29_image_segmentation/: CMakeLists.txt  README.md  image_segmentation.cpp
03_imgproc_module/31_add_noise/: add_noise.cpp
04_highgui_module/: READMD.md
05_imgcodecs_module/: READMD.md
06_videoio_module/: READMD.md
07_calib3d_module/: READMD.md
07_calib3d_module/01_camera_calibration/: camera_calibration.cpp
07_calib3d_module/01_undistort/: CMakeLists.txt  README.md
08_feature2d_module/01_harris_corner_detector/: CMakeLists.txt  harris_corner_detector.cpp  harris_corner_detector1.cpp
08_feature2d_module/02_shi_tomasi_corner_detector/: CMakeLists.txt  shi_tomasi.cpp
08_feature2d_module/04_locate_corner_with_subpixeles/: README.md
08_feature2d_module/05_feature_detection/: CMakeLists.txt  README.md  feature_detection.cpp  feature_detection3.cpp  orb_detection.cpp
08_feature2d_module/06_feature_description/: CMakeLists.txt  README.md
08_feature2d_module/07_feature_match/: README.md  feature_statistic.cpp  knn_match.cpp  orb_match.cpp
11_dnn_module/: READMD.md
12_ml_module/: README.md
12_ml_module/01-PCA/: CMakeLists.txt  README.md  pca_face.cpp  pic_face.txt
cpp_opencv/: README.md
cpp_opencv/02_core_module/06_change_contrast_and_brightness/: CMakeLists.txt  basicLinearTransform.cpp  change_contrast_brightness.cpp
cpp_opencv/02_core_module/09-discrete_fourier_transform/: CMakeLists.txt  README.md
cpp_opencv/02_core_module/11_interoperability_with_OpenCV_1/: CMakeLists.txt
cpp_opencv/03_imgproc_module/14_hough_lines/: CMakeLists.txt  README.md  houghlines_demo.cpp
cpp_opencv/03_imgproc_module/19_histogram_calculation/: CMakeLists.txt  histogram_calculation.cpp
cpp_opencv/03_imgproc_module/20_histogram_comparison/: CMakeLists.txt  histogram_comparison.cpp
cpp_opencv/06_videoio_module/01_display_video/: CMakeLists.txt  README.md  display.cpp  display.py  set_show_fps.cpp  test.py
cpp_opencv/06_videoio_module/03_frame_rate/: CMakeLists.txt  README.md  frame_rate.cpp
cpp_opencv/07_calib3d_module/01_camera_calibration/: CMakeLists.txt  README.md  in_VID5.xml  out_camera_data.xml
cpp_opencv/07_calib3d_module/02-undistort_image/: CMakeLists.txt  undistort_image.cpp
cpp_opencv/07_calib3d_module/04_stereo/: CMakeLists.txt  stereo.cpp
cpp_opencv/07_calib3d_module/06_ICP/: CMakeLists.txt  README.md  icp_test.cpp
cpp_opencv/07_calib3d_module/07_direct/: CMakeLists.txt  READMD.md  direct_method.cpp
cpp_opencv/08_feature2d_module/03_own_corner_detector/: CMakeLists.txt  README.md  own_corner_detector.cpp
cpp_opencv/08_feature2d_module/07_feature_match/: CMakeLists.txt  README.md
cpp_opencv/08_feature2d_module/10_test_match/: CMakeLists.txt  test_match.cpp
cpp_opencv/08_feature2d_module/10_test_match/src/: utils.cpp  utils.h
cpp_opencv/08_feature2d_module/13_my_orb/: CMakeLists.txt  computeORB.cpp
cpp_opencv/08_feature2d_module/14_optical_flow/: CMakeLists.txt  README.md  optical_flow.cpp  sse.cpp
py_opencv/: README.md
(+128 files in other folders)
